# SNB

./: .clangd  .cproject  .project  CMakeLists.txt  MIGRATION_GUIDE.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/WiFi/: CMakeLists.txt  wifi.c  wifi.h
components/audio/: CMakeLists.txt  mp23abs1tr.c  mp23abs1tr.h
components/ble/: CMakeLists.txt  ble.c  ble.h
components/common/: CMakeLists.txt  config.h  datatypes.h  sensor_types.h
components/ext_flash/: CMakeLists.txt  w25q64jv.c  w25q64jv.h
components/file_reader/: CMakeLists.txt  file_reader.c  file_reader.h
components/hal_adc/: CMakeLists.txt  hal_adc.c  hal_adc.h
components/hal_gpio/: CMakeLists.txt  hal_gpio.c  hal_gpio.h
components/hal_i2c/: CMakeLists.txt  hal_i2c.c  hal_i2c.h
components/hal_spi/: CMakeLists.txt  hal_spi.c  hal_spi.h
components/hr/: CMakeLists.txt  max30102.c  max30102.h
components/imu/: CMakeLists.txt  bno085.c  bno085.h  hr_fft.c  hr_fft.h
components/mw_bno085/: CMakeLists.txt  idf_component.yml  mw_bno085.c  (+1 more)
main/: CMakeLists.txt  main.c  peripherial_init.c  peripherial_init.h  struct_2_json.c  struct_2_json.h
main/Feature_processing/: feature_processing.c  feature_processing.h
main/app/feature_processing/: feature_processing.c  feature_processing.h  feature_processing_feed.c
main/data_pipeline/: data_pipeline.c  data_pipeline.h
main/sensor_data_processing/: data_processing.c  data_processing.h  signal_list.h
main/sensor_processing/: CMakeLists.txt  sensor_processing.c  sensor_processing.h
main/streaming/: streaming.c  streaming.h
(+18 files in other folders)
